--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "test": "test",
-    "lint-ts": "yarn eslint ./src/**"
+    "lint-ts": "yarn eslint ./src/** ./test/** --ext .ts"
   },
   "pre-commit": [
     "lint"
@@ -26,6 +26,7 @@
     "typescript": "^5.0.2",
     "ts-node": "10.9.1",
     "ethers": "^6.9.0",
-    "eslint": "^8.37.0"
+    "eslint": "^8.37.0",
+    "winston": "^3.11.0"
   }
 }
