--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@types/node": "^18.15.11",
     "@zero-tech/eslint-config-cpt": "0.2.7",
+    "axios": "^1.6.5",
     "eslint": "^8.37.0",
     "ethers": "^6.9.0",
     "mongodb": "^6.3.0",
