fix index file is package.json and create new type for deployer args

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "git+https://github.com/zer0-os/zDC.git"
   },
-  "main": "index.ts",
+  "main": "src/index.ts",
   "engines": {
     "node": ">=18",
     "npm": ">=9"
