--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "tsc",
     "prepublish": "yarn build",
     "test": "test",
-    "lint-ts": "yarn eslint ./src/** ./test/** --ext .ts"
+    "lint": "yarn eslint ./src/** --ext .ts"
   },
   "pre-commit": [
     "lint"
@@ -27,7 +27,7 @@
     "@types/node": "^18.15.11",
     "@zero-tech/eslint-config-cpt": "0.2.7",
     "axios": "^1.6.5",
-    "eslint": "^8.37.0",
+    "eslint": "^8.56.0",
     "mongodb": "^6.3.0",
     "ts-node": "10.9.1",
     "typescript": "^5.0.2",
