--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@types/node": "^18.15.11",
     "@zero-tech/eslint-config-cpt": "0.2.7",
     "eslint": "^8.56.0",
     "ts-node": "10.9.1",
-    "typescript": "^5.0.2",
-    "@types/node": "^18.15.11"
+    "typescript": "^5.0.2"
   }
 }
