--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ defaults: &defaults
     - image: cimg/node:18.15.0
 
 jobs:
-  build:
+  build and test:
     <<: *defaults
     steps:
       - checkout
@@ -17,6 +17,7 @@ jobs:
           pkg-manager: yarn
       - run: yarn lint
       - run: yarn build
+      - run: yarn test
       - persist_to_workspace:
           root: ~/repo
           paths: [.]
@@ -24,4 +25,4 @@ workflows:
   version: 2
   build:
     jobs:
-      - build
+      - build and test
