--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
   "devDependencies": {
     "@types/mocha": "^10.0.6",
     "@types/node": "^18.15.11",
+    "ethers": "^6.9.0",
+    "hardhat": "^2.19.1",
+    "@openzeppelin/hardhat-upgrades": "^3.0.3",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
     "@zero-tech/eslint-config-cpt": "0.2.7",
     "eslint": "^8.56.0",
     "mocha": "^10.2.0",
