--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,8 @@
     "strictPropertyInitialization": true,
     "noImplicitAny": true,
     "declaration": true
-  }
+  },
+  "include": [
+    "./src/**/*",
+  ],
 }
