--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
   },
   "compilerOptions": {
     "outDir": "./dist",
+    "rootDir": "./src",
     "target": "es2022",
     "module": "node16",
     "moduleResolution": "node16",
@@ -17,5 +18,8 @@
     "strictPropertyInitialization": true,
     "noImplicitAny": true,
     "declaration": true
-  }
+  },
+  "exclude": [
+    "./test",
+  ]
 }
