--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,5 +1,5 @@
 {
-  "extends": "./tsconfig",
-  "include": ["src", "test"],
-  "exclude": []
+  "extends": "./tsconfig.json",
+  "include": ["./src/**/*", "./test/**/*"],
+  "exclude": ["./dist/**/*"]
 }
