--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
   },
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src",
+    "rootDir": "./",
     "target": "es2022",
     "module": "node16",
     "moduleResolution": "node16",
@@ -19,8 +19,11 @@
     "noImplicitAny": true,
     "declaration": true
   },
+  "include": [
+    "src/**/*",
+    "test/**/*.ts"
+  ],
   "exclude": [
-    "./test/**/*",
     "./dist/**/*"
   ]
 }
